..  $Id$

Release Notes
=============

Trunk 


June 20, 2018 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu=
--------------------------------------------------------------------
Release V01-04-00
* Added tilt correction. To use, set tiltTableDir to point to resources/tilt

Nov 3, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu=
--------------------------------------------------------------------
Release V01-03-00
* Updated tests


March 27, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu=
--------------------------------------------------------------------
Release V01-02-05

* Added slicing functionality and knots-vectors retrieval (+ pybindings)

  -- Thorsten Gluesenkamp

* fixes syntax for python3 

  -- David Schultz

* Group velocity is given to fillHessian function 
* Fixing failing tests 

  -- Andrii Terliuk

* Cascades are forced to have length 0
* No deprecated numpy code is used
* Fill out both halves of the Hessian matrix in I3PhotoSplineTable::EvalHessian()

  -- Jakob van Santen

April 3, 2015 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------

Release V01-02-01

* Fixes for new I3MCTree

  -- David Schultz

* Move .fits files to I3_TESTDATA and make tests refer to that
* Small code fixes to suppress warnings
* Close potential memory leak

  -- Don la Dieu

* Small code fixes to suppress warnings
* Select module coordinates by I3OMGeo object instead of requiring client
  code to unpack coordinates itself

  -- Jakob van Santen


December 12, 2014 Meike de With (meike.de.with@desy.de)
------------------------------------------------------------------------

Release V01-02-00

* Make PhotoSpline radial extents an input variable, to speed up
  calculations for low-energy events (DOMs far away are not expected to
  get any light, so just return a 0 NPE expectation for these DOMs, which
  saves a lot of look-up/calculation time)
